[gd_scene load_steps=12 format=2]

[ext_resource path="res://Graphics/princess.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Select.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Built.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Idle_Building.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Building.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Build.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Build_timer.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Score_Timer.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 5.81429 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.1678
height = 46.0883

[node name="Building" type="StaticBody2D"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -25.3048 )
scale = Vector2( 1, 3.90892 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -28.4321 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.264954, -0.0731735 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="Area2D/CollisionShape2D"]
script = ExtResource( 2 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Area2D/CollisionShape2D/StateMachine"]
script = ExtResource( 5 )

[node name="Select" type="Node" parent="Area2D/CollisionShape2D/StateMachine"]
script = ExtResource( 3 )

[node name="Build" type="Node" parent="Area2D/CollisionShape2D/StateMachine"]
script = ExtResource( 7 )

[node name="Built" type="Node" parent="Area2D/CollisionShape2D/StateMachine"]
script = ExtResource( 4 )

[node name="Timers" type="Node" parent="."]

[node name="Build timer" type="Timer" parent="Timers"]
wait_time = 5.0
script = ExtResource( 8 )

[node name="Score Timer" type="Timer" parent="Timers"]
script = ExtResource( 9 )
[connection signal="body_entered" from="Area2D" to="Area2D/CollisionShape2D/StateMachine/Idle" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D/CollisionShape2D/StateMachine/Build" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D/CollisionShape2D/StateMachine/Built" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D/CollisionShape2D/StateMachine/Select" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="Area2D" to="Area2D/CollisionShape2D/StateMachine/Idle" method="_on_Area2D_body_exited"]
[connection signal="Start_Build_Timer" from="Area2D/CollisionShape2D/StateMachine/Build" to="Timers/Build timer" method="_on_Build_Start_Build_Timer"]
[connection signal="Start_Score_Timer" from="Area2D/CollisionShape2D/StateMachine/Built" to="Timers/Score Timer" method="_on_Built_Start_Score_Timer"]
[connection signal="Stop_Score_Timer" from="Area2D/CollisionShape2D/StateMachine/Built" to="Timers/Score Timer" method="_on_Built_Stop_Score_Timer"]
[connection signal="timeout" from="Timers/Build timer" to="Area2D/CollisionShape2D/StateMachine/Build" method="_on_Build_timer_timeout"]
[connection signal="timeout" from="Timers/Score Timer" to="." method="_on_Score_Timer_timeout"]
